--- a/EventMob/www/index.html
+++ b/EventMob/www/index.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="js/directives.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
   </head>
-  <body ng-app="SysTodoList" class="platform-android">
+  <body ng-app="EventMob" class="platform-android">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
