--- a/EventMob/www/index.html
+++ b/EventMob/www/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script type="text/javascript" src="lib/angular-messages/angular-messages.min.js"></script>
 	<script type="text/javascript" src="js/md5.js"></script>
 	<script type="text/javascript" src="js/webconfig.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
