--- a/TMS-PTIndoTrans/www/index.html
+++ b/TMS-PTIndoTrans/www/index.html
@@ -19,6 +19,11 @@
     <script type="text/javascript" src="js/controllers.js"></script>
     <script type="text/javascript" src="js/directives.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
+    <script type="text/javascript" src="http://dn-bughd-web.qbox.me/bughd.min.js" crossOrigin="anonymous"></script>
+    <script type="text/javascript">
+        window.bughd = window.bughd || function(){};
+        bughd("create",{key:"ed189cf12bffab6b7671081e1dcbe8ac"})
+    </script>
   </head>
   <body ng-app="EventMob" class="platform-android">
     <ion-nav-view></ion-nav-view>
