update to version v1.0.24

--- a/TMS/www/index.html
+++ b/TMS/www/index.html
@@ -1,31 +1,48 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <link rel="stylesheet" href="lib/ionic/css/ionic.min.css">
-    <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/normalize.css">
-    <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/main.css">
-    <link rel="stylesheet" href="css/app.css">
-    <script type="text/javascript" src="lib/ionic/js/ionic.bundle.min.js"></script>
-	<script type="text/javascript" src="lib/ngCordova/dist/ng-cordova.min.js"></script>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-    <script type="text/javascript" src="lib/angular-messages/angular-messages.min.js"></script>
-	<script type="text/javascript" src="js/md5.js"></script>
-	<script type="text/javascript" src="js/webconfig.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/controllers.js"></script>
-    <script type="text/javascript" src="js/directives.js"></script>
-    <script type="text/javascript" src="js/services.js"></script>
-    <script type="text/javascript" src="http://dn-bughd-web.qbox.me/bughd.min.js" crossOrigin="anonymous"></script>
-    <script type="text/javascript">
-        window.bughd = window.bughd || function(){};
-        bughd("create",{key:"ed189cf12bffab6b7671081e1dcbe8ac"})
-    </script>
-  </head>
-  <body ng-app="EventMob" class="platform-android">
-    <ion-nav-view></ion-nav-view>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <link rel="stylesheet" href="lib/ionic/css/ionic.min.css">
+  <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/normalize.css">
+  <link rel="stylesheet" href="lib/ionic-filter-bar/dist/ionic.filter.bar.css">
+  <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/main.css">
+  <link rel="stylesheet" href="css/app.css">
+  <script type="text/javascript" src="lib/ionic/js/ionic.bundle.min.js"></script>
+  <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
+  <script type="text/javascript" src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+  <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.js"></script>
+  <script type="text/javascript" src="cordova.js"></script>
+  <script src="lib/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+  <script type="text/javascript" src="lib/angular-messages/angular-messages.min.js"></script>
+  <script src="lib/ionic-ion-header-shrink/ionic.headerShrink.js"></script>
+  <script src="lib/is_js/is.min.js"></script>
+  <script src="lib/moment/min/moment-with-locales.min.js"></script>
+  <script type="text/javascript" src="js/md5.js"></script>
+  <script type="text/javascript" src="js/webconfig.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+  <!-- <script src="js/controllers.js"></script> -->
+  <script type="text/javascript" src="js/directives.js"></script>
+  <script type="text/javascript" src="js/services.js"></script>
+  <script src="js/factories.js"></script>
+  <script src="view/detail.js"></script>
+  <script src="view/list.js"></script>
+  <script src="view/loading.js"></script>
+  <script src="view/login.js"></script>
+  <script src="view/main.js"></script>
+  <script src="view/setting.js"></script>
+  <script src="view/update.js"></script>
+  <script type="text/javascript" src="http://dn-bughd-web.qbox.me/bughd.min.js" crossOrigin="anonymous"></script>
+  <script type="text/javascript">
+    window.bughd = window.bughd || function(){};
+    bughd("create",{key:"bc502e92c968dcffad41bfba3fbb99ce"})
+  </script>
+</head>
+
+<body ng-app="EventMob" class="platform-android">
+  <ion-nav-view></ion-nav-view>
+</body>
+
 </html>
